--- a/Kodak/resources/css/admin.css
+++ b/Kodak/resources/css/admin.css
@@ -96,8 +96,7 @@ html{
 }
 
 #home{
-    min-height: 500px;
-    max-height: 100%;
+    min-height: calc(100vh - 60px);
     background-image: linear-gradient(125deg,#2c3e50, #1b5134, #0b151c, #0a2432,#8e44ad);
     background-blend-mode: darken;
     background-size: 400% 400%;
@@ -525,36 +524,6 @@ textarea.contact-form-text{
 }
 
 
-.col{
-    flex: 1;
-    height: 100px;
-    position: relative;
-}
-.countdown-col{
-    background-size: cover;
-}
-.time{
-    color: #0b403e;
-    text-transform: uppercase;
-    width: 90%;
-    display: flex;
-    justify-content: center;
-}
-.middle{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    text-align: center;
-}
-.time span{
-    padding: 0 14px;
-    font-size: 20px;
-}
-.time span div{
-    font-size: 40px;
-}
-
 .blog-posts{
     width: min(1200px, 100%);
     padding: 20px;
@@ -624,9 +593,6 @@ textarea.contact-form-text{
     text-align: center;
     justify-content: space-between;
     flex-wrap: wrap;
-    background-color: #ffffff;
-    border-radius: 30%;
-    box-shadow: 0px -5px 5px -5px rgba(34, 60, 80, 0.6);
 }
 
 .pagination a{
@@ -635,9 +601,11 @@ textarea.contact-form-text{
     line-height: 80px;
     text-align: center;
     color: #333;
-    font-size: 18px;
+    font-size: 25px;
     font-weight: 700;
     transition: .3s linear;
+    border-radius: 5%;
+    background: white;
 }
 
 .pagination a:hover{
@@ -678,7 +646,7 @@ textarea.contact-form-text{
     font-size: 30px;
 }
 
-.title{
+.titlesouv{
     position: absolute;
     bottom: 0;
     left: 50%;
@@ -747,7 +715,7 @@ textarea.contact-form-text{
     background: inherit;
 }
 
-.table3 .title{
+.table3 .titlesouv{
     background-image: linear-gradient(125deg,#e74c3c,#f39c12);
 }
 
@@ -951,3 +919,92 @@ footer{
         padding: 60px;
     }
 }
+
+
+.message-section{
+    width: 100%;
+    background: inherit;
+    padding: 40px 0;
+    color: white;
+}
+.message-width{
+    max-width: 1000px;
+    overflow: hidden;
+    padding: 0 20px;
+    margin: auto;
+}
+.message-section h1{
+    text-align: center;
+}
+.border{
+    width: 100px;
+    height: 3px;
+    background: #e74c3c;
+    margin: 40px auto;
+}
+.message-section-row{
+    display: flex;
+    flex-wrap: wrap;
+}
+.message-section-col{
+    flex: 50%;
+}
+.about{
+    padding-right: 30px;
+}
+.about p{
+    text-align: justify;
+    margin-bottom: 20px;
+}
+.about a{
+    display: inline-block;
+    color: #e74c3c;
+    text-decoration: none;
+    border: 2px solid #e74c3c;
+    border-radius: 24px;
+    padding: 8px 40px;
+    transition: 0.4s linear;
+}
+.about a:hover{
+    color: #fff;
+    background: #e74c3c;
+}
+.skillsmessage{
+    padding-left: 0px;
+}
+.skillm{
+    margin-bottom: 10px;
+}
+.progress{
+    width: 100%;
+    height: 12px;
+    background: #ddd;
+    border-radius: 12px;
+}
+.progress-bar{
+    height: 12px;
+    background: #e74c3c;
+    border-radius: 12px;
+}
+
+.progress-bar span{
+    float: right;
+    margin-right: 6px;
+    line-height: 13px;
+    color: #fff;
+    font-size: 12px;
+}
+@media screen and (max-width:700px) {
+    .message-section-col{
+        flex: 100%;
+        margin: 10px 0;
+    }
+    .about,.skills{
+        padding: 0;
+    }
+    .about{
+        text-align: center;
+    }
+}
+
+
