--- a/Kodak/public/css/admin.css
+++ b/Kodak/public/css/admin.css
@@ -101,7 +101,7 @@ html{
 
 #home{
   min-height: calc(100vh - 60px);
-  background-image: linear-gradient(125deg,#2c3e50, #1b5134, #0b151c, #0a2432,#8e44ad);
+  background: #696464;
   background-blend-mode: darken;
   background-size: 400% 400%;
   background-attachment: fixed;
@@ -792,7 +792,7 @@ label {
 }
 
 footer{
-  background-image: linear-gradient(125deg,#2c3e50, #1b5134, #0b151c, #0a2432,#8e44ad);
+  background: #454040;
   color: #fff;
   padding: 15px 0;
   text-align: center;
@@ -1064,5 +1064,45 @@ footer{
   }
 }
 
+/* Стиль списка */
+
+ul.breadcrumb {
+  padding: 10px 16px;
+  list-style: none;
+  background-color: inherit;
+  text-align: left;
+}
+
+/* Отображение элементов списка бок о бок */
+
+ul.breadcrumb li {
+  display: inline;
+  font-size: 18px;
+}
+
+/* Добавить символ косой черты (/) перед/за каждым элементом списка */
+
+ul.breadcrumb li+li:before {
+  padding: 8px;
+  color: black;
+  content: "/\00a0";
+}
+
+/* Добавить цвет для всех ссылок внутри списка */
+
+ul.breadcrumb li a {
+  color: #dce9dc;
+  text-decoration: none;
+}
+
+/* Добавить цвет на наведении курсора мыши */
+
+ul.breadcrumb li a:hover {
+  color: #0a0909;
+}
+
+#home h2{
+  font-size: 50px;
+}
 
 
