--- a/Kodak/resources/css/app.css
+++ b/Kodak/resources/css/app.css
@@ -723,9 +723,6 @@ section.dark5{
     height: 100px;
 }
 
-.contact-info .item:hover{
-    background-color: #48dbfb;
-}
 
 .contact-form{
     display: flex;
@@ -773,7 +770,7 @@ section.dark5{
 
 footer{
     padding: 5px 0;
-    box-shadow:  5px -5px 10px #bebebe, -5px 5px 10px #ffffff;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 .footer-container{
@@ -1259,4 +1256,8 @@ footer{
 
 ul {
     margin-bottom: 20px;
+}
+
+.row li{
+    padding: 5px;
 }
