Kodak(Production(SEO5))

--- a/Kodak/resources/css/admin.css
+++ b/Kodak/resources/css/admin.css
@@ -288,6 +288,8 @@ section.dark .section-title::after{
     margin: 10px 0;
     padding: 30px;
     position: relative;
+    overflow: hidden;
+    word-break: break-all;
 }
 
 .block::before{
