--- a/Kodak/resources/css/test.css
+++ b/Kodak/resources/css/test.css
@@ -2,7 +2,7 @@ body{
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background: #f69a73;
+    background: #ffffff;
 }
 
 .box{
@@ -12,7 +12,7 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    background: white;
+    background: rgb(244, 255, 142);
     text-align: center;
     border-radius: 30px;
 }
@@ -20,7 +20,8 @@ body{
     color: #fdfdfd;
     text-transform: uppercase;
     font-weight: 500;
-    background: #1eb0a3;
+    background: #62d0fc;
+    border-radius: 15px;
 }
 .box input[type = "text"],.box input[type = "password"]{
     border:0;
