--- a/Kodak/public/css/app.css
+++ b/Kodak/public/css/app.css
@@ -770,6 +770,7 @@ footer {
     margin-left: 20px;
     cursor: pointer;
     transition: opacity 0.3s linear;
+    text-align: center;
 }
 .btn:hover {
     opacity: 0.7;
