--- a/Kodak/resources/css/test.css
+++ b/Kodak/resources/css/test.css
@@ -1,100 +1,180 @@
-body{
+/* ===== Google Font Import - Poformsins ===== */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
+*{
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
-    background: #ffffff;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
-.box{
-    width: 300px;
-    padding: 40px;
+body{
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #4070f4;
+}
+
+.container{
+    position: relative;
+    max-width: 430px;
+    width: 100%;
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    margin: 0 20px;
+}
+
+.container .forms{
+    display: flex;
+    align-items: center;
+    height: 440px;
+    width: 200%;
+    transition: height 0.2s ease;
+}
+
+
+.container .form{
+    width: 50%;
+    padding: 30px;
+    background-color: #fff;
+    transition: margin-left 0.18s ease;
+}
+
+.container.active .login{
+    margin-left: -50%;
+    opacity: 0;
+    transition: margin-left 0.18s ease, opacity 0.15s ease;
+}
+
+.container .signup{
+    opacity: 0;
+    transition: opacity 0.09s ease;
+}
+.container.active .signup{
+    opacity: 1;
+    transition: opacity 0.2s ease;
+}
+
+.container.active .forms{
+    height: 600px;
+}
+.container .form .title{
+    position: relative;
+    font-size: 27px;
+    font-weight: 600;
+}
+
+.form .title::before{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 3px;
+    width: 30px;
+    background-color: #4070f4;
+    border-radius: 25px;
+}
+
+.form .input-field{
+    position: relative;
+    height: 50px;
+    width: 100%;
+    margin-top: 30px;
+}
+
+.input-field input{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    padding: 0 35px;
+    border: none;
+    outline: none;
+    font-size: 16px;
+    border-bottom: 2px solid #ccc;
+    border-top: 2px solid transparent;
+    transition: all 0.2s ease;
+}
+
+.input-field input:is(:focus, :valid){
+    border-bottom-color: #4070f4;
+}
+
+.input-field i{
     position: absolute;
     top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    background: rgb(244, 255, 142);
-    text-align: center;
-    border-radius: 30px;
+    transform: translateY(-50%);
+    color: #999;
+    font-size: 23px;
+    transition: all 0.2s ease;
 }
-.box h1{
-    color: #fdfdfd;
-    text-transform: uppercase;
-    font-weight: 500;
-    background: #62d0fc;
-    border-radius: 15px;
+
+.input-field input:is(:focus, :valid) ~ i{
+    color: #4070f4;
 }
-.box input[type = "text"],.box input[type = "password"]{
-    border:0;
-    background: none;
-    display: block;
-    margin: 20px auto;
-    text-align: center;
-    border: 2px solid #3498db;
-    padding: 14px 10px;
-    width: 200px;
-    outline: none;
-    color: #0e0e0e;
-    border-radius: 24px;
-    transition: 0.25s;
+
+.input-field i.icon{
+    left: 0;
 }
-.box input[type = "text"]:focus,.box input[type = "password"]:focus{
-    width: 280px;
-    border-color: #2ecc71;
-}
-.box input[type = "submit"]{
-    border:0;
-    background: none;
-    display: block;
-    margin: 20px auto;
-    text-align: center;
-    border: 2px solid #2ecc71;
-    padding: 14px 40px;
-    outline: none;
-    color: #090909;
-    border-radius: 24px;
-    transition: 0.25s;
+.input-field i.showHidePw{
+    right: 0;
     cursor: pointer;
-}
-.box input[type = "submit"]:hover{
-    background: #2ecc71;
+    padding: 10px;
 }
 
-.box a{
-    padding: 2px;
-    background-color: #08f3e0;
-    color: white;
+.form .checkbox-text{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+.checkbox-text .checkbox-content{
+    display: flex;
+    align-items: center;
+}
+
+.checkbox-content input{
+    margin: 0 8px -2px 4px;
+    accent-color: #4070f4;
+}
+
+.form .text{
+    color: #333;
+    font-size: 14px;
+}
+
+.form a.text{
+    color: #4070f4;
     text-decoration: none;
 }
-
-.box .text{
-    color: #08dbf3;
-    text-decoration: none;
+.form a:hover{
+    text-decoration: underline;
 }
 
+.form .button{
+    margin-top: 35px;
+}
 
-alert{
-    font-family: 'Rubik One', sans-serif;
-    color: #ffffff;
-    display: table;
-    margin: 20px auto;
+.form .button input{
+    border: none;
+    color: #fff;
     font-size: 17px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    border-radius: 6px;
+    background-color: #4070f4;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.button input:hover{
+    background-color: #265df2;
+}
+
+.form .login-signup{
+    margin-top: 30px;
     text-align: center;
-    top: 50%;
-    left: 50%;
-    position: absolute;
-}
-
-.alert ul{
-    text-align: left;
-}
-
-.zebra {
-    list-style: none;
-    border-left: 10px solid #211e1e;
-    padding: 0;
-}
-.zebra li {padding: 10px;}
-
-.alert li{
-    margin: 5px;
 }
