--- a/Kodak/resources/css/app.css
+++ b/Kodak/resources/css/app.css
@@ -325,6 +325,7 @@ section {
 
 .section-title {
     text-align: center;
+    text-transform: uppercase;
     margin-bottom: 80px;
     position: relative;
     font-size: 26px;
@@ -361,27 +362,13 @@ section {
 
 .about-pic {
     width: 200px;
-    -webkit-clip-path: polygon(
-        20% 0%,
-        80% 0%,
-        100% 20%,
-        100% 80%,
-        80% 100%,
-        20% 100%,
-        0% 80%,
-        0% 20%
-    );
-    clip-path: polygon(
-        20% 0%,
-        80% 0%,
-        100% 20%,
-        100% 80%,
-        80% 100%,
-        20% 100%,
-        0% 80%,
-        0% 20%
-    );
     margin-right: 100px;
+}
+
+.about-pic-serv {
+    width: 200px;
+    margin-right: 100px;
+    box-shadow: 0 -10px 10px rgba(0, 0, 0, 0.2);
 }
 
 .about-text {
@@ -407,9 +394,25 @@ section {
 
 .about-text p {
     font-size: 25px;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.about-text-main {
+    flex: 1;
+}
+
+.about-text-main h2 {
+    text-align: left;
+    font-size: 40px;
+}
+
+.about-text-main p {
+    font-size: 25px;
     text-align: justify;
     margin-top: 20px;
 }
+
 
 .skills {
     margin-top: 40px;
@@ -421,7 +424,7 @@ section {
 .skillsh1 {
     text-align: center;
     text-transform: uppercase;
-    color: #fdfcfc;
+    color: #000000;
 }
 
 .skill {
@@ -514,11 +517,11 @@ section.dark .section-title::after {
 }
 
 section.dark3 {
-    background-color: #353b48;
+    background-color: #f1f1f1;
 }
 
 section.dark3 p {
-    color: #fdfdfd;
+    color: #000000;
 }
 
 section.dark3 .skills {
@@ -526,11 +529,11 @@ section.dark3 .skills {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    color: #ffffff;
+    color: #030303;
 }
 
 section.dark3 .section-title {
-    color: #f1f1f1;
+    color: #030303;
 }
 
 section.dark3 .section-title::before {
@@ -700,6 +703,7 @@ section.dark5 {
     border-radius: 4px;
     cursor: pointer;
     transition: 0.3s linear;
+    box-shadow: 0 -10px 10px rgba(0, 0, 0, 0.2);
 }
 
 .contact-info i {
@@ -942,10 +946,6 @@ footer {
         display: block;
     }
 
-    .container {
-        display: none;
-    }
-
     section.dark {
         height: 100%;
     }
@@ -1028,6 +1028,10 @@ footer {
         margin: 0 auto 60px;
     }
 
+    .about-pic-serv {
+        margin: 0 auto 60px;
+    }
+
     .about-text {
         flex: 100%;
         text-align: center;
@@ -1054,6 +1058,23 @@ footer {
     .about-textsouv {
         flex: 100%;
         text-align: center;
+    }
+
+    .about-text-main {
+        flex: 100%;
+        text-align: center;
+    }
+    
+    .about-text-main h2 {
+        font-size: 45px;
+        text-align: center;
+        margin-top: 20px;
+    }
+    
+    .about-text-main p {
+        text-align: center;
+        font-size: 20px;
+        margin-top: 20px;
     }
 
     .service {
@@ -1154,7 +1175,7 @@ footer {
 .gallery-section h1 {
     text-align: center;
     text-transform: uppercase;
-    color: #ffffff;
+    color: #020202;
 }
 
 .border {
@@ -1172,18 +1193,17 @@ footer {
 .gallery-section .image {
     flex: 25%;
     overflow: hidden;
-    cursor: pointer;
+    margin: 3%;
+    padding: 2%;
+    border-radius: 5%;
+    box-shadow: 0 -10px 10px rgba(0, 0, 0, 0.2);
 }
 
 .gallery-section .image img {
     width: 100%;
     height: 100%;
-    transition: 0.4s;
 }
 
-.gallery-section .image:hover img {
-    transform: scale(1.2);
-}
 
 @media screen and (max-width: 960px) {
     .gallery-section .image {
@@ -1598,4 +1618,91 @@ footer {
     .image-gallery header {
         font-size: 25px;
     }
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+}
+
+.heading_container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: center;
+    color: #091314;
+}
+
+.heading_container h2 {
+    font-weight: bold;
+}
+
+.gallery_section .gallery_container {
+    position: relative;
+    max-width: 1500px;
+    margin: auto;
+}
+
+.gallery_section .gallery_container .gallery_bg {
+    position: absolute;
+    width: 100%;
+    top: 10%;
+    margin-left: 0;
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+    z-index: -1;
+}
+
+.gallery_section .gallery_container .gallery_bg img {
+    width: 100%;
+}
+
+.gallery_section .gallery_container .gallery_box {
+    width: 85%;
+    margin: auto;
+}
+
+.gallery_section .gallery_container .box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+}
+
+.gallery_section .gallery_container .box.b1 .img-box {
+    margin-left: 8%;
+}
+
+.gallery_section .gallery_container .box.b3 {
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
+    justify-content: flex-end;
+}
+
+.gallery_section .gallery_container .box.b4 {
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
+    justify-content: flex-start;
+}
+
+.gallery_section .gallery_container .box.b4 .img-box {
+    margin-left: 8%;
+}
+
+.gallery_section .gallery_container .box .img-box {
+    position: relative;
+    margin: 10px;
+    border-radius: 35px;
+    overflow: hidden;
+    width: 350px;
+    box-shadow: 0 -10px 10px rgba(0, 0, 0, 0.2);
+}
+
+.gallery_section .gallery_container .box .img-box img {
+    width: 100%;
 }
