--- a/Kodak/public/css/app.css
+++ b/Kodak/public/css/app.css
@@ -47,21 +47,26 @@ html {
 }
 .menu-toggler {
     background: none;
-    width: 30px;
+    width: 40px;
     border: none;
     cursor: pointer;
     position: relative;
     outline: none;
     z-index: 999;
     display: none;
+    padding: 2px;
+    border: 2px solid white;
+    border-radius: 5%;
 }
 .menu-toggler span {
     display: block;
-    height: 3px;
-    background-color: red;
+    height: 4px;
+    background-color: rgb(255, 166, 0);
     margin: 6px 0;
     position: relative;
     transition: 0.3s linear;
+    border-radius: 5%;
+    border: solid white;
 }
 .navbar-menu a {
     margin-left: 10px;
@@ -949,13 +954,13 @@ footer {
         flex: 100%;
         text-align: center;
     }
-    
+
     .about-text-main h2 {
         font-size: 45px;
         text-align: center;
         margin-top: 20px;
     }
-    
+
     .about-text-main p {
         text-align: center;
         font-size: 20px;
@@ -1526,5 +1531,16 @@ footer {
 }
 .gallery_section .gallery_container .box .img-box img {
     width: 100%;
+}
+.map {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.map .inner-width {
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+    padding: 0 20px;
 }
 
