--- a/Kodak/public/css/app.css
+++ b/Kodak/public/css/app.css
@@ -744,6 +744,10 @@ footer {
         max-width: 600px;
     }
 
+    .video-box {
+        width: 100%;
+    }
+
     .right-col {
         text-align: center;
         width: 100%;
