--- a/Kodak/public/css/test.css
+++ b/Kodak/public/css/test.css
@@ -1,2 +1,156 @@
 @import url(https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap);
-*{box-sizing:border-box;font-family:Poppins,sans-serif;margin:0;padding:0}body{align-items:center;background-color:#4070f4;display:flex;height:100vh;justify-content:center}.container{background:#fff;border-radius:10px;box-shadow:0 5px 10px rgba(0,0,0,.1);margin:0 20px;max-width:430px;overflow:hidden;position:relative;width:100%}.container .forms{align-items:center;display:flex;height:440px;transition:height .2s ease;width:200%}.container .form{background-color:#fff;padding:30px;transition:margin-left .18s ease;width:50%}.container.active .login{margin-left:-50%;opacity:0;transition:margin-left .18s ease,opacity .15s ease}.container .signup{opacity:0;transition:opacity .09s ease}.container.active .signup{opacity:1;transition:opacity .2s ease}.container.active .forms{height:600px}.container .form .title{font-size:27px;font-weight:600;position:relative}.form .title:before{background-color:#4070f4;border-radius:25px;bottom:0;content:"";height:3px;left:0;position:absolute;width:30px}.form .input-field{height:50px;margin-top:30px;position:relative;width:100%}.input-field input{border:none;border-bottom:2px solid #ccc;border-top:2px solid transparent;font-size:16px;height:100%;outline:none;padding:0 35px;position:absolute;transition:all .2s ease;width:100%}.input-field input:is(:focus,:valid){border-bottom-color:#4070f4}.input-field i{color:#999;font-size:23px;position:absolute;top:50%;transform:translateY(-50%);transition:all .2s ease}.input-field input:is(:focus,:valid)~i{color:#4070f4}.input-field i.icon{left:0}.input-field i.showHidePw{cursor:pointer;padding:10px;right:0}.form .checkbox-text{justify-content:space-between;margin-top:20px}.checkbox-text .checkbox-content,.form .checkbox-text{align-items:center;display:flex}.checkbox-content input{accent-color:#4070f4;margin:0 8px -2px 4px}.form .text{color:#333;font-size:14px}.form a.text{color:#4070f4;text-decoration:none}.form a:hover{text-decoration:underline}.form .button{margin-top:35px}.form .button input{background-color:#4070f4;border:none;border-radius:6px;color:#fff;cursor:pointer;font-size:17px;font-weight:500;letter-spacing:1px;transition:all .3s ease}.button input:hover{background-color:#265df2}.form .login-signup{margin-top:30px;text-align:center}
+
+/* ===== Google Font Import - Poformsins ===== */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+body{
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #4070f4;
+}
+.container{
+    position: relative;
+    max-width: 430px;
+    width: 100%;
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    margin: 0 20px;
+}
+.container .forms{
+    display: flex;
+    align-items: center;
+    height: 440px;
+    width: 200%;
+    transition: height 0.2s ease;
+}
+.container .form{
+    width: 50%;
+    padding: 30px;
+    background-color: #fff;
+    transition: margin-left 0.18s ease;
+}
+.container.active .login{
+    margin-left: -50%;
+    opacity: 0;
+    transition: margin-left 0.18s ease, opacity 0.15s ease;
+}
+.container .signup{
+    opacity: 0;
+    transition: opacity 0.09s ease;
+}
+.container.active .signup{
+    opacity: 1;
+    transition: opacity 0.2s ease;
+}
+.container.active .forms{
+    height: 600px;
+}
+.container .form .title{
+    position: relative;
+    font-size: 27px;
+    font-weight: 600;
+}
+.form .title::before{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 3px;
+    width: 30px;
+    background-color: #4070f4;
+    border-radius: 25px;
+}
+.form .input-field{
+    position: relative;
+    height: 50px;
+    width: 100%;
+    margin-top: 30px;
+}
+.input-field input{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    padding: 0 35px;
+    border: none;
+    outline: none;
+    font-size: 16px;
+    border-bottom: 2px solid #ccc;
+    border-top: 2px solid transparent;
+    transition: all 0.2s ease;
+}
+.input-field input:is(:focus, :valid){
+    border-bottom-color: #4070f4;
+}
+.input-field i{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #999;
+    font-size: 23px;
+    transition: all 0.2s ease;
+}
+.input-field input:is(:focus, :valid) ~ i{
+    color: #4070f4;
+}
+.input-field i.icon{
+    left: 0;
+}
+.input-field i.showHidePw{
+    right: 0;
+    cursor: pointer;
+    padding: 10px;
+}
+.form .checkbox-text{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+.checkbox-text .checkbox-content{
+    display: flex;
+    align-items: center;
+}
+.checkbox-content input{
+    margin: 0 8px -2px 4px;
+    accent-color: #4070f4;
+}
+.form .text{
+    color: #333;
+    font-size: 14px;
+}
+.form a.text{
+    color: #4070f4;
+    text-decoration: none;
+}
+.form a:hover{
+    text-decoration: underline;
+}
+.form .button{
+    margin-top: 35px;
+}
+.form .button input{
+    border: none;
+    color: #fff;
+    font-size: 17px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    border-radius: 6px;
+    background-color: #4070f4;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+.button input:hover{
+    background-color: #265df2;
+}
+.form .login-signup{
+    margin-top: 30px;
+    text-align: center;
+}
